logging/geoip/geoip-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: geoip
spec:
  ports:
  - name: web
    port: 8080
    
  selector:
    name: geoip
