logging/geoip/geoip-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geoip
spec:
  rules:
  - host: geoip.${HOSTNAME}.${DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: geoip
            port: 
              name: web
